; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/rsym/extr_rsym64.c_DwDecodeSleb128.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/rsym/extr_rsym64.c_DwDecodeSleb128.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @DwDecodeSleb128(i64* %0, i8* %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8, align 1
  %8 = alloca i64, align 8
  store i64* %0, i64** %3, align 8
  store i8* %1, i8** %4, align 8
  store i64 0, i64* %5, align 8
  store i64 0, i64* %6, align 8
  store i64 0, i64* %8, align 8
  br label %9

9:                                                ; preds = %27, %2
  %10 = load i8*, i8** %4, align 8
  %11 = load i64, i64* %8, align 8
  %12 = getelementptr inbounds i8, i8* %10, i64 %11
  %13 = load i8, i8* %12, align 1
  store i8 %13, i8* %7, align 1
  %14 = load i64, i64* %8, align 8
  %15 = add i64 %14, 1
  store i64 %15, i64* %8, align 8
  %16 = load i8, i8* %7, align 1
  %17 = zext i8 %16 to i32
  %18 = and i32 %17, 127
  %19 = load i64, i64* %6, align 8
  %20 = trunc i64 %19 to i32
  %21 = shl i32 %18, %20
  %22 = sext i32 %21 to i64
  %23 = load i64, i64* %5, align 8
  %24 = or i64 %23, %22
  store i64 %24, i64* %5, align 8
  %25 = load i64, i64* %6, align 8
  %26 = add i64 %25, 7
  store i64 %26, i64* %6, align 8
  br label %27

27:                                               ; preds = %9
  %28 = load i8, i8* %7, align 1
  %29 = zext i8 %28 to i32
  %30 = and i32 %29, 128
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %9, label %32

32:                                               ; preds = %27
  %33 = load i8, i8* %7, align 1
  %34 = zext i8 %33 to i32
  %35 = and i32 %34, 64
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %45

37:                                               ; preds = %32
  %38 = load i64, i64* %6, align 8
  %39 = trunc i64 %38 to i32
  %40 = shl i32 1, %39
  %41 = sub nsw i32 0, %40
  %42 = sext i32 %41 to i64
  %43 = load i64, i64* %5, align 8
  %44 = or i64 %43, %42
  store i64 %44, i64* %5, align 8
  br label %45

45:                                               ; preds = %37, %32
  %46 = load i64, i64* %5, align 8
  %47 = load i64*, i64** %3, align 8
  store i64 %46, i64* %47, align 8
  %48 = load i64, i64* %8, align 8
  ret i64 %48
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
